cabal-version: 3.0
name:          helloworld
version:       0.0.0
synopsis:      HelloWorld in Haskell
description:   HelloWorld in Haskell
license:       Apache-2.0
author:        Andres Almiray
category:      Development

executable helloworld
    main-is:          HelloWorld.hs
    build-depends:    base >= 4.16.1
    hs-source-dirs:   src
    default-language: Haskell2010
